cmake_minimum_required(VERSION 3.14)
project(thread_example)

set(CMAKE_CXX_STANDARD 17)
include_directories(../../lib/magic_enum/include)
include_directories(../../lib)
set(OpenCV_DIR "/usr/local/Cellar/opencv/4.5.2/include/opencv4/opencv2/")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

add_executable(opencv opencv.cpp)
add_executable(mutex_demo lock/mutex_demo.c)
add_executable(mutex_cpp lock/mutex_cpp.cpp)
target_link_libraries(mutex_cpp -lpthread)
add_executable(mutex_try_lock lock/mutex_try_lock.cpp)
target_link_libraries(mutex_try_lock -lpthread)
add_executable(thread_test thread/thread_test.c)
add_executable(thread_param thread/thread_param.cpp)
add_executable(mutex_cond lock/mutex_cond.cpp)
target_link_libraries(mutex_cond -lpthread)
add_executable(simple_thread thread/simple_thread.cpp)
target_link_libraries(simple_thread -lpthread)
add_executable(thread_pool thread/threadpool.cpp thread/threadpool.h)
target_link_libraries(thread_pool -lpthread)