cmake_minimum_required(VERSION 3.14)
project(10_day_practice)

set(CMAKE_CXX_STANDARD 17)
add_executable(print_exercise day1/print_exercise.cpp)
add_executable(union_learn day1/union_learn.cpp)
add_executable(x_to_the_nth_power "day2/x_to_the_nth_power.cpp")
add_executable(rolldice day2/rolldice.cpp)
add_executable(struct_cpp day2/struct_cpp.cpp)
add_executable(Tower_of_Hanoi_1 day2/Tower_of_Hanoi_1.cpp)
add_executable(find_pai day2/find_π.cpp)
add_executable(static_variable1 day2/static_variable1.cpp)
add_executable(Swap_two_numbers day3/Swap_two_numbers.cpp)
add_executable(functoin_exersice day3/functoin_exersice.cpp)
add_executable(inline_cpp day3/inline_cpp.cpp)
add_executable(static_member_func1 day3/static_member_func1.cpp)
add_executable(friend_class1 day4/友元函数/friend_class1.cpp)
add_executable(clock day4/拷贝构造函数/clock.h day4/拷贝构造函数/clock.cpp)
add_executable(Constructor_call_order day5/构造函数与析构函数/Constructor_call_order.cpp)
add_executable(Derived_class_without_constructor day5/构造函数与析构函数/Derived_class_without_constructor.cpp)
add_executable(Derived_class_constructor day5/构造函数与析构函数/Derived_class_constructor.cpp)
add_executable(Derived_class_passes_parameters_to_base_class day5/构造函数与析构函数/Derived_class_passes_parameters_to_base_class.cpp)
add_executable(Derived_class_constructor_call_order day5/构造函数与析构函数/Derived_class_constructor_call_order.cpp)
add_executable(protect_members day5/继承访问权限/protect_members.cpp)
add_executable(protected_inheritance day5/继承访问权限/protected_inheritance.cpp)
add_executable(public_inheritance day5/继承访问权限/public_inheritance.cpp)
add_executable(private_inheritance day5/继承访问权限/private_inheritance.cpp)
add_executable(example_2 day5/虚拟继承/example_2.cpp)
add_executable(direct_base_class_and_indirect_base_class day5/调用规则/direct_base_class_and_indirect_base_class.cpp)
add_executable(Members_inherited_from_the_base_class day6/虚函数/Members_inherited_from_the_base_class.cpp)
add_executable(virtual_function_feature day6/虚函数/virtual_function_feature.cpp)
add_executable(virtual_function_example day6/虚函数/virtual_function_example.cpp)
add_executable(virtual_destructor day6/虚函数/virtual_destructor.cpp)
add_executable(map_se day8/STL/map_se.cpp)
add_executable(1 day9/异常例子/1.cpp)
add_executable(2 day9/异常例子/2.cpp)
add_executable(3 day9/异常例子/3.cpp)
add_executable(4 day9/异常例子/4.cpp)
add_executable(5 day9/异常例子/5.cpp)
add_executable(6 day9/异常例子/6.cpp)
add_executable(7 day9/异常例子/7.cpp)
add_executable(7-1 day9/异常例子/7-1.cpp)
add_executable(8 day9/异常例子/8.cpp)
add_executable(9 day9/异常例子/9.cpp)
add_executable(9-2 day9/异常例子/9-2.cpp)
add_executable(10 day9/异常例子/10.cpp)
add_executable(get_12-2 "day10/文件例题/三种输入格式/get()12-2.cpp")
add_executable(get_a_size_12-2-1 "day10/文件例题/三种输入格式/get(a,size)12-2-1.cpp")
add_executable(getline_12-2-2 "day10/文件例题/三种输入格式/getline()12-2-2.cpp")
add_executable(12-2applications day10/文件例题/12-2applications.cpp)
add_executable(12-3 day10/文件例题/12-3.cpp)
add_executable(12-5 day10/文件例题/12-5.cpp)
add_executable(12-6 day10/文件例题/12-6.cpp)
add_executable(12-7 day10/文件例题/12-7.cpp)
add_executable(12-9 day10/文件例题/12-9.cpp)
add_executable(get_max_value day8/函数模板/get_max_value.cpp)
add_executable(important day8/函数模板/important.cpp)