cmake_minimum_required(VERSION 3.14)
project(cpp_principles_practice)

set(CMAKE_CXX_STANDARD 17)
include_directories(../lib/magic_enum/include)
include_directories(../lib)
include_directories(./include)

add_executable(p32_1 Chapter2/p32_1.cpp)
add_executable(p35_3.1_input Chapter3/p35_3.1_input.cpp)
add_executable(p35_3.3_input Chapter3/p35_3.3_input.cpp)
add_executable(p41_3.5.1_repeate Chapter3/p41_3.5.1_repeate.cpp)
add_executable(p47_3.9.2_type_convert Chapter3/p47_3.9.2_type_convert.cpp)
add_executable(p48_excercise Chapter3/p48_excercise.cpp)
add_executable(p49_ex02 Chapter3/p49_ex02.cpp)
add_executable(p49_bad_name Chapter3/p49_bad_name.cpp)
add_executable(p49_ex04 Chapter3/p49_ex04.cpp)
add_executable(p49_ex06 Chapter3/p49_ex06.cpp)
add_executable(p49+ex07 Chapter3/p49_ex07.cpp)
add_executable(p49_ex08 Chapter3/p49_ex08.cpp)
add_executable(p50_ex10 Chapter3/p50_ex10.cpp)
add_executable(p50_ex11 Chapter3/p50_ex11.cpp)

add_executable(p59_trytry Chapter4/p59_trytry.cpp)
add_executable(p63_tt_char_table Chapter4/p63_tt_char_table.cpp)
add_executable(p66_tt Chapter4/p66_tt.cpp)
add_executable(p67_4.6_vector Chapter4/p67_4.6_vector.cpp)
add_executable(p70_4.6.3_text Chapter4/p70_4.6.3_text.cpp)
add_executable(p71_tt Chapter4/p71_tt.cpp)
add_executable(p71_ex01 Chapter4/p71_ex01.cpp)
add_executable(p71_ex06 Chapter4/p71_ex06.cpp)